# Exp_CMake_setup

app_GTK3/: CMakeLists.txt  main.cpp
app_OpenCV/: CMakeLists.txt  main.cpp
basic/: CMakeLists.txt  main.cpp
basic/my_math/: CMakeLists.txt
basic/my_math/include/my_math/: div.hpp
basic/my_math/src/: add.cpp  div.cpp
basic/my_print/: CMakeLists.txt
basic/my_print/include/my_print/: print.hpp
basic/my_print/src/: print.cpp
basic_test/: CMakeLists.txt  main.cpp
